# obsidian-cli

./: .cursorignore  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  example-obsidian-cli.toml  pyproject.toml  requirements.txt  test_serve_interrupt.py
.github/: copilot-instructions.md
docs/: UPDATE_SUMMARY.md  api-reference.md  changes.md  commands.md  configuration.md  contributing.md  error-handling.md  force-options.md  index.md  installation.md  mcp-integration.md  testing-guide.md
docs/commands/: ls.md
src/obsidian_cli/: __init__.py  configuration.py  exceptions.py  main.py  mcp_server.py  types.py  utils.py
test_vault/: Test Lazy Import.md
test_vault/Calendar/2025/08/: 2025-08-19.md
test_vault/Daily Notes/: 2025-08-19 Tuesday.md
tests/: run_tests.py  test_coverage_improvements.py  test_isolated.py  test_journal_date_option.py  test_main.py  test_mcp_server.py  test_mcp_server_comprehensive.py  test_mcp_server_unit.py  test_utils_coverage.py  validate_and_fix.py  validate_exit_codes.py
tests/unit/: test_find_helpers.py  test_utils.py
